Fix Navbar -Inserito Z-Index

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ height: 70px;
   background-color: #f5f8fa;
   border-bottom: 1px solid #cbd6e2;
   position: fixed;
+  z-index: 1;
 }
 
 .container{
